# mogs-optimization-core

./: .gitignore  CMakeLists.txt  MogsOptimizationCoreConfig.cmake.in  config_MogsOptimization.h.in  config_MogsOptimizationCore.h.in  install_packages_ubuntu.sh
constraints/: CMakeLists.txt
constraints/Balance/: CMakeLists.txt  config_MogsBalanceConstraint.h.in
constraints/Balance/include/: BalanceConstraint.hxx
constraints/Balance/src/: BalanceConstraint.cpp
constraints/BalanceConstraint/: CMakeLists.txt  MogsBalanceConstraintConfig.cmake.in
constraints/BalanceConstraint/include/: BalanceConstraint.hpp  BalanceConstraint.hxx
constraints/BalanceConstraint/src/: BalanceConstraint.cpp
constraints/BoxCollision/: CMakeLists.txt  MogsBoxCollisionConstraintConfig.cmake.in  config_MogsBoxCollisionConstraint.h.in
constraints/BoxCollision/derivative/: CMakeLists.txt
constraints/BoxCollision/include/: BoxCollisionConstraint.hpp
constraints/BoxCollision/src/: BoxCollisionConstraint.cpp
constraints/BoxCollisionConstraint/: CMakeLists.txt  MogsBoxCollisionConstraintConfig.cmake.in
constraints/BoxCollisionConstraint/derivative/: CMakeLists.txt
constraints/BoxCollisionConstraint/include/: BoxCollisionConstraint.hpp  BoxCollisionConstraint.hxx
constraints/BoxCollisionConstraint/src/: BoxCollisionConstraint.cpp
constraints/BoxContact/: CMakeLists.txt  MogsBoxContactConstraintConfig.cmake.in  config_MogsBoxContactConstraint.h.in
constraints/BoxContact/include/: BoxContactConstraint.hxx
constraints/BoxContactConstraint/: CMakeLists.txt
constraints/BoxContactConstraint/include/: BoxContactConstraint.hpp  BoxContactConstraint.hxx
constraints/BoxContactConstraint/src/: BoxContactConstraint.cpp
constraints/KinematicContactConstraints/: CMakeLists.txt  MogsKinematicContactConstraintConfig.cmake.in  config_MogsKinematicContactConstraint.h.in
constraints/KinematicContactConstraints/include/: KinematicContactConstraint.hpp  KinematicContactConstraint.hxx
constraints/KinematicContactConstraints/src/: KinematicContactConstraint.cpp
constraints/Position/: config_MogsPositionConstraint.h.in
constraints/Position/derivative/: CMakeLists.txt
constraints/Position/include/: PositionConstraint.hxx
constraints/Position/src/: PositionConstraint.cpp
constraints/PositionConstraint/: CMakeLists.txt  MogsPositionConstraintConfig.cmake.in
constraints/PositionConstraint/include/: PositionConstraint.hpp
constraints/PositionConstraint/src/: PositionConstraint.cpp
constraints/PositionDConstraint/: CMakeLists.txt  MogsPositionDConstraintConfig.cmake.in  config_MogsPositionDConstraint.h.in
constraints/PositionDConstraint/include/: PositionDConstraint.hpp  PositionDConstraint.hxx
constraints/PositionDConstraint/src/: PositionDConstraint.cpp
constraints/ToZeroConstraint/: CMakeLists.txt  MogsToZeroConstraintConfig.cmake.in  config_MogsToZeroConstraint.h.in
constraints/ToZeroConstraint/derivative/: CMakeLists.txt
constraints/ToZeroConstraint/include/: ToZeroConstraint.hpp  ToZeroConstraint.hxx
constraints/ToZeroConstraint/src/: ToZeroConstraint.cpp
constraints/Torque/: MogsTorqueConstraintConfig.cmake.in
constraints/Torque/derivative/: CMakeLists.txt
constraints/Torque/include/: TorqueConstraint.hpp  TorqueConstraint.hxx
constraints/Torque/src/: TorqueConstraint.cpp
constraints/TorqueConstraint/: CMakeLists.txt  config_MogsTorqueConstraint.h.in
constraints/TorqueConstraint/include/: TorqueConstraint.hpp  TorqueConstraint.hxx
constraints/TorqueConstraint/src/: TorqueConstraint.cpp
constraints/Transformation/: CMakeLists.txt  MogsTransformationConstraintConfig.cmake.in  config_MogsTransformationConstraint.h.in
constraints/Transformation/include/: TransformationConstraint.hpp
constraints/Transformation/src/: TransformationConstraint.cpp
constraints/TransformationConstraint/: CMakeLists.txt
constraints/TransformationConstraint/include/: TransformationConstraint.hpp  TransformationConstraint.hxx
constraints/TransformationConstraint/src/: TransformationConstraint.cpp
criterias/: CMakeLists.txt
criterias/CameraCriteria/: CMakeLists.txt  MogsCameraCriteriaConfig.cmake.in  config_MogsCameraCriteria.h.in
criterias/CameraCriteria/derivative/: CMakeLists.txt
criterias/CameraCriteria/include/: CameraCriteria.hpp  CameraCriteria.hxx
criterias/CameraCriteria/src/: CameraCriteria.cpp
criterias/CloseToMiddleCriteria/: CMakeLists.txt  MogsCloseToMiddleCriteriaConfig.cmake.in  config_MogsCloseToMiddleCriteria.h.in
criterias/CloseToMiddleCriteria/include/: CloseToMiddleCriteria.hpp  CloseToMiddleCriteria.hxx
criterias/CloseToMiddleCriteria/src/: CloseToMiddleCriteria.cpp
criterias/PositionCriteria/: CMakeLists.txt  MogsPositionCriteriaConfig.cmake.in  config_MogsPositionCriteria.h.in
criterias/PositionCriteria/derivative/: CMakeLists.txt
criterias/PositionCriteria/include/: PositionCriteria.hpp  PositionCriteria.hxx
criterias/PositionCriteria/src/: PositionCriteria.cpp
criterias/TorqueCriteria/: CMakeLists.txt  MogsTorqueCriteriaConfig.cmake.in  config_MogsTorqueCriteria.h.in
criterias/TorqueCriteria/derivative/: CMakeLists.txt
criterias/TorqueCriteria/include/: TorqueCriteria.hpp  TorqueCriteria.hxx
criterias/TorqueCriteria/src/: TorqueCriteria.cpp
criterias/include/: AbstractCriteria.hpp  CameraCriteria.hpp  CameraCriteria.hxx  PositionCriteria.hpp  PositionCriteria.hxx
criterias/src/: CameraCriteria.cpp
optim_solvers/IPOPT/: CMakeLists.txt  MogsIpoptOptimizationConfig.cmake.in  config_MogsIpoptOptimization.h.in  install_packages_ubuntu.sh
optim_solvers/IPOPT/CMakeModules/: FindIPOPT.cmake
optim_solvers/IPOPT/NLP/: CMakeLists.txt
optim_solvers/IPOPT/include/: MogsAbstractOptimizationNLP.h  MogsIpoptOptimization.h  (+5 more)
optim_solvers/MGA/: CMakeLists.txt  MogsMGAOptimizationConfig.cmake.in  config_MogsMGAOptimization.h.in
parameterization/StaticPostureParameterization/: CMakeLists.txt  MogsStaticPostureParameterizationConfig.cmake.in  MogsToZeroConstraintConfig.cmake.in  config_MogsStaticPostureParameterization.h.in
(+245 files in other folders)
